# github-genai-trends

./: .env.example  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: alert.yml  pages.yml
gh_trends/: __init__.py  cli.py  config.py  notify.py  sources.py  state.py  trends.py
state/: seen.json
tests/: test_pipeline.py  test_trends.py
web/: data.json  index.html
